# immich-shared-library

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml.example  dedup_synced.py  delete_synced.py  docker-compose.yml  env.example  pyproject.toml  reset.sh  run-utility.sh  setup.py  test.env.example  test_sync.py
src/: album_sync.py  asset_sync.py  cleanup.py  config.py  db.py  file_ops.py  health.py  immich_api.py  main.py  ml_sync.py  person_sync.py  scan_manager.py  schema.py  sync_engine.py
